--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,17 @@
-<header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
+<!DOCTYPE html>
+<html lang="en">
 
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
-    </ul>
-  </nav>
-</header>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document 9</title>
+   <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+
+    <ul>
+    <li> <a href="1-gallery.html">Gallery</a></li>
+    <li> <a href="2-form.html">Form</a></li>
+  </ul>
+
+</body>
+</html>
