--- a/src/partials/index.html
+++ b/src/partials/index.html
@@ -9,8 +9,8 @@
   <body>
 
     <ul>
-    <li> <a href="1-gallery.html">Gallery</a></li>
-    <li> <a href="2-form.html">Form</a></li>
+    <li> <a href="/src/public/1-gallery.html">Gallery</a></li>
+    <li> <a href="/src/public/2-form.html">Form</a></li>
   </ul>
 
 </body>
