--- a/src/partials/vite-promo.html
+++ b/src/partials/vite-promo.html
@@ -9,8 +9,8 @@
   <body>
 
     <ul>
-    <li> <a href="./1-gallery.html">Gallery</a></li>
-    <li> <a href="./2-form.html">Form</a></li>
+    <li> <a href="/src/1-gallery.html">Gallery</a></li>
+    <li> <a href="/src/2-form.html">Form</a></li>
   </ul>
 
 </body>
