--- a/src/partials/index.html
+++ b/src/partials/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document 9</title>
-  
+   <link rel="stylesheet" href="/src/css/styles.css" />
+  </head>
   <body>
 
     <ul>
