--- a/src/partials/vite-promo.html
+++ b/src/partials/vite-promo.html
@@ -9,7 +9,7 @@
   <body>
 
     <ul>
-    <li> <a href="/src/1-gallery.html">Gallery</a></li>
+    <li> <a href="/src/1-timer.html">Gallery</a></li>
     <li> <a href="/src/2-form.html">Form</a></li>
   </ul>
 
